Fixed one of the arrow dropdown images not showing

--- a/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_header.scss
+++ b/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_header.scss
@@ -142,7 +142,7 @@
             }
 
             &.menu-item-has-children > a {
-                background: url("/static/nau-basic/images/arrow-dropdown.svg") no-repeat right 5.5px;
+                background: url("../images/arrow-dropdown.svg") no-repeat right 5.5px;
                 background-size: 12px;
                 padding-right: 20px;
             }
